--- a/android/KuXing/app/src/main/AndroidManifest.xml
+++ b/android/KuXing/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <application
         android:name=".KuXingApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
